added icon and preview card

--- a/index.html
+++ b/index.html
@@ -2,8 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/teachfi-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Social Cards -->
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@TeachFiNetwork" />
+    <meta name="twitter:creator" content="@TeachFiNetwork" />
+    <meta name="twitter:title" content="TeachFi Network" />
+    <meta
+      name="twitter:description"
+      content="Decentralized Education for a Better Tomorrow"
+    />
+    <meta
+      name="twitter:image"
+      content="https://teachfi.network/preview.jpg"
+    />
+
+    <!-- Other Cards -->
+    <meta property="og:url" content="https://teachfi.network" />
+    <meta property="og:title" content="TeachFi Network" />
+    <meta
+      property="og:description"
+      content="Decentralized Education for a Better Tomorrow"
+    />
+    <meta
+      property="og:image"
+      content="https://teachfi.network/preview.jpg"
+    />
+
     <title>TeachFi</title>
   </head>
   <body>
